Design friends list items

--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -70,28 +70,127 @@
             <!-- item 1 -->
             <div class="friends__item">
               <div class="friends__avatar">
-                <img src="" alt="" class="friends__img" />
+                <img src="./images/user01.jpg" alt="" class="friends__img" />
               </div>
               <span class="friends__name">Friend 1</span>
-              <button class="friends__btn">+</button>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
             </div>
 
             <!-- item 2 -->
             <div class="friends__item">
               <div class="friends__avatar">
-                <img src="" alt="" class="friends__img" />
+                <img src="./images/user02.jpg" alt="" class="friends__img" />
               </div>
               <span class="friends__name">Friend 2</span>
-              <button class="friends__btn">+</button>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
             </div>
 
             <!-- item 3 -->
             <div class="friends__item">
               <div class="friends__avatar">
-                <img src="" alt="" class="friends__img" />
+                <img src="./images/user03.jpg" alt="" class="friends__img" />
               </div>
               <span class="friends__name">Friend 3</span>
-              <button class="friends__btn">+</button>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
+            </div>
+
+            <!-- item 4 -->
+            <div class="friends__item">
+              <div class="friends__avatar">
+                <img src="./images/user04.jpg" alt="" class="friends__img" />
+              </div>
+              <span class="friends__name">Friend 4</span>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
+            </div>
+
+            <!-- item 5 -->
+            <div class="friends__item">
+              <div class="friends__avatar">
+                <img src="./images/user05.jpg" alt="" class="friends__img" />
+              </div>
+              <span class="friends__name">Friend 5</span>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
+            </div>
+
+            <!-- item 6 -->
+            <div class="friends__item">
+              <div class="friends__avatar">
+                <img src="./images/user06.jpg" alt="" class="friends__img" />
+              </div>
+              <span class="friends__name">Friend 6</span>
+              <button class="btn btn--40 btn--rounded">
+                <svg
+                  class="btn__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="black"
+                  width="24px"
+                  height="24px"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+                </svg>
+              </button>
             </div>
           </div>
         </section>
