Use the new app icon

--- a/public/register.html
+++ b/public/register.html
@@ -11,7 +11,7 @@
     <header class="appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/logo.svg" alt="" />
+        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
     </header>
     <main class="main">
