--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -17,7 +17,7 @@
     <header class="appbar appbar--space-between">
       <!-- logo -->
       <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/logo.svg" alt="" />
+        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
 
       <!-- Profile dropdown -->
