--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
     <header class="appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/logo.svg" alt="" />
+        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
     </header>
     <main class="main">
