Design right message item

--- a/public/chat.html
+++ b/public/chat.html
@@ -59,7 +59,7 @@
             </div>
 
             <!-- item 2 -->
-            <div class="message">
+            <div class="message message--right">
               <div class="message__avatar-wrapper">
                 <img src="./images/user01.jpg" alt="" class="message__avatar" />
               </div>
@@ -89,7 +89,7 @@
             </div>
 
             <!-- item 4 -->
-            <div class="message">
+            <div class="message message--right">
               <div class="message__avatar-wrapper">
                 <img src="./images/user01.jpg" alt="" class="message__avatar" />
               </div>
