Design chat friends items

--- a/public/chat.html
+++ b/public/chat.html
@@ -125,33 +125,63 @@
             <h2 class="subtitle">Friends List</h2>
             <div class="chat-friends-list">
               <!-- item 1 -->
-              <div class="chat-friends-list__item">
-                <div class="chat-friends-list__avatar">
-                  <img src="" alt="" class="chat-friends-list__img" />
-                  <span class="chat-friends-list__status"></span>
+              <div class="chat-friend chat-friend--active">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img src="./images/user01.jpg" alt="" class="chat-friend__avatar" />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
-                <span class="chat-friends-list__name">Friend 1</span>
+                <span class="chat-friend__name">Friend 1</span>
               </div>
 
-              <!-- item 1 -->
-              <div class="chat-friends-list__item">
-                <div class="chat-friends-list__avatar">
-                  <img src="" alt="" class="chat-friends-list__img" />
-                  <span class="chat-friends-list__status"></span>
+              <!-- item 2 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img src="./images/user02.jpg" alt="" class="chat-friend__avatar" />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
-                <span class="chat-friends-list__name">Friend 1</span>
+                <span class="chat-friend__name">Friend 2</span>
               </div>
 
-              <!-- item 1 -->
-              <div class="chat-friends-list__item">
-                <div class="chat-friends-list__avatar">
-                  <img src="" alt="" class="chat-friends-list__img" />
-                  <span class="chat-friends-list__status"></span>
+              <!-- item 3 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img src="./images/user03.jpg" alt="" class="chat-friend__avatar" />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
-                <span class="chat-friends-list__name">Friend 1</span>
+                <span class="chat-friend__name">Friend 3</span>
               </div>
-            </div>
-            <a class="find-friends-btn" href="#">Find Friends</a>
+
+              <!-- item 4 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img src="./images/user04.jpg" alt="" class="chat-friend__avatar" />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 4</span>
+              </div>
+
+              <!-- item 5 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img src="./images/user05.jpg" alt="" class="chat-friend__avatar" />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 5</span>
+              </div>
+            
+          </div>
+          <div class="btn-wrapper btn-wrapper--center">
+            <a class="btn" href="#">Find Friends</a>
           </div>
         </aside>
       </div>
