Add z-index mixin

--- a/public/chat.html
+++ b/public/chat.html
@@ -184,6 +184,7 @@
             <a class="btn" href="#">Find Friends</a>
           </div>
         </aside>
+        <div class="scrim"></div>
       </div>
     </main>
 
