Hide footer on chat on mobile

--- a/public/chat.html
+++ b/public/chat.html
@@ -189,7 +189,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer">
+    <footer class="footer chat-footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
