--- a/public/chat.html
+++ b/public/chat.html
@@ -14,24 +14,39 @@
   </head>
   <body>
     <!-- appbar -->
-    <header class="appbar appbar--space-between">
+    <header class="appbar">
+      <!-- menu -->
+      <div class="appbar__section">
+        <button class="appbar__menu">
+          <div class="appbar__icon">
+            <span class="appbar__bar appbar__bar--top"></span>
+            <span class="appbar__bar appbar__bar--middle"></span>
+            <span class="appbar__bar appbar__bar--bottom"></span>
+          </div>
+        </button>
+      </div>
+
       <!-- logo -->
-      <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
-      </a>
+      <div class="appbar__section appbar__section--margin">
+        <a class="logo" href="home.html"
+          ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
+        </a>
+      </div>
 
       <!-- Profile dropdown -->
-      <div class="profile-dropdown">
-        <div class="profile-dropdown__img-wrapper">
-          <img
-            class="profile-dropdown__img"
-            src="./images/profile.jpg"
-            alt=""
-          />
-        </div>
-        <div class="profile-dropdown__content">
-          <a href="#" class="profile-dropdown__link">Profile</a>
-          <a href="#" class="profile-dropdown__link">Logout</a>
+      <div class="appbar__section appbar__section--right">
+        <div class="profile-dropdown">
+          <div class="profile-dropdown__img-wrapper">
+            <img
+              class="profile-dropdown__img"
+              src="./images/profile.jpg"
+              alt=""
+            />
+          </div>
+          <div class="profile-dropdown__content">
+            <a href="#" class="profile-dropdown__link">Profile</a>
+            <a href="#" class="profile-dropdown__link">Logout</a>
+          </div>
         </div>
       </div>
     </header>
@@ -111,10 +126,17 @@
               name="message"
             />
             <button class="btn btn--search" type="submit">
-              <svg class="btn__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M4.01 6.03l7.51 3.22-7.52-1 .01-2.22m7.5 8.72L4 17.97v-2.22l7.51-1M2.01 3L2 10l15 2-15 2 .01 7L23 12 2.01 3z"/></svg>
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                height="24px"
+                viewBox="0 0 24 24"
+                width="24px"
+                fill="#000000"
+              >
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                  d="M4.01 6.03l7.51 3.22-7.52-1 .01-2.22m7.5 8.72L4 17.97v-2.22l7.51-1M2.01 3L2 10l15 2-15 2 .01 7L23 12 2.01 3z"
                 />
               </svg>
             </button>
@@ -128,7 +150,11 @@
               <div class="chat-friend chat-friend--active">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img src="./images/user01.jpg" alt="" class="chat-friend__avatar" />
+                    <img
+                      src="./images/user01.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -139,7 +165,11 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img src="./images/user02.jpg" alt="" class="chat-friend__avatar" />
+                    <img
+                      src="./images/user02.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -150,7 +180,11 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img src="./images/user03.jpg" alt="" class="chat-friend__avatar" />
+                    <img
+                      src="./images/user03.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -161,7 +195,11 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img src="./images/user04.jpg" alt="" class="chat-friend__avatar" />
+                    <img
+                      src="./images/user04.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -172,16 +210,20 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img src="./images/user05.jpg" alt="" class="chat-friend__avatar" />
+                    <img
+                      src="./images/user05.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
                 <span class="chat-friend__name">Friend 5</span>
               </div>
-            
-          </div>
-          <div class="btn-wrapper btn-wrapper--center">
-            <a class="btn" href="#">Find Friends</a>
+            </div>
+            <div class="btn-wrapper btn-wrapper--center">
+              <a class="btn" href="#">Find Friends</a>
+            </div>
           </div>
         </aside>
         <div class="scrim"></div>
