Create new page sections

--- a/public/chat.html
+++ b/public/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="chat-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Chat</title>
   </head>
-  <body>
+  <body class="chat-page__body">
     <!-- appbar -->
-    <header class="appbar">
+    <header class="chat-page__header appbar">
       <!-- menu -->
       <div class="appbar__section">
         <button class="appbar__menu">
@@ -52,7 +52,7 @@
     </header>
 
     <!-- main -->
-    <main class="main">
+    <main class="chat-page__main main">
       <div class="chat-content">
         <section class="chat-content__messages">
           <div class="message-list">
@@ -231,7 +231,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer chat-footer">
+    <footer class="chat-page__footer footer chat-footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
