--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="friendslist-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Friends List</title>
   </head>
-  <body>
+  <body class="friendslist-page__body">
     <!-- appbar -->
-    <header class="appbar appbar--space-between">
+    <header class="friendslist-page__header appbar appbar--space-between">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
@@ -37,7 +37,7 @@
     </header>
 
     <!-- main -->
-    <main class="main">
+    <main class="friendslist-page__main main">
       <div class="friendslist-content">
         <section class="friendslist-content__form">
           <form class="seach-form">
@@ -198,7 +198,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer">
+    <footer class="friendslist-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
