--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Home</title>
   </head>
-  <body>
-    <header class="appbar">
+  <body class="home-page__body">
+    <header class="home-page__header appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
     </header>
-    <main class="main">
+    <main class="home-page__main main">
       <div class="home-content">
         <section class="home-content__copy">
           <!-- heading -->
@@ -220,7 +220,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="home-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
