--- a/public/profile.html
+++ b/public/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="profile-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Profile</title>
   </head>
-  <body>
-    <header class="appbar appbar--space-between">
+  <body class="profile-page__body">
+    <header class="profile-page__header appbar appbar--space-between">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
@@ -34,7 +34,7 @@
         </div>
       </div>
     </header>
-    <main class="main">
+    <main class="profile-page__main main">
       <div class="profile-content">
         <section class="profile-content__form">
           <h1 class="title">Profile</h1>
@@ -94,7 +94,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="profile-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
     <script src="./scripts/app.js"></script>
