--- a/public/register.html
+++ b/public/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="register-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Register</title>
   </head>
-  <body>
-    <header class="appbar">
+  <body class="register-page__body">
+    <header class="register-page__header appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
     </header>
-    <main class="main">
+    <main class="register-page__main main">
       <div class="register-content">
         <section class="register-content__form">
           <h1 class="title">Register</h1>
@@ -78,7 +78,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="register-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
