--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="login-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Login</title>
   </head>
-  <body>
-    <header class="appbar">
+  <body class="login-page__body">
+    <header class="login-page__header appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
       </a>
     </header>
-    <main class="main">
+    <main class="login-page__main main">
       <div class="login-content">
         <section class="login-content__form">
           <h1 class="title">Login</h1>
@@ -62,7 +62,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="login-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
