Redesign home page

--- a/public/home.html
+++ b/public/home.html
@@ -37,11 +37,11 @@
 
         <section class="home-content__hero">
           <!-- hero -->
-          <div class="hero">
+          <div class="home-hero">
             <!-- <img class="hero__img" src="./images/hero.svg" alt="" /> -->
             <!-- SVG illustration -->
             <svg
-              class="hero__img"
+              class="home-hero__img"
               width="512"
               height="512"
               viewBox="0 0 512 512"
