Redesign chat page

--- a/public/chat.html
+++ b/public/chat.html
@@ -231,7 +231,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="chat-page__footer footer chat-footer">
+    <footer class="chat-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
