Reorganize login page

--- a/public/login.html
+++ b/public/login.html
@@ -20,47 +20,47 @@
       </a>
     </header>
     <main class="login-page__main main">
-      <div class="login-content">
-        <section class="login-content__form">
-          <h1 class="title">Login</h1>
-          <form class="form">
-            <div class="form__section">
-              <label class="form__label" for="email">Email</label>
-              <input
-                class="form__input-control"
-                id="email"
-                type="text"
-                name="email"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="password">Password</label>
-              <input
-                class="form__input-control"
-                id="password"
-                type="password"
-                name="password"
-              />
-            </div>
-
-            <div class="form__section">
-              <div class="btn-wrapper btn-wrapper--center">
-                <button class="btn" type="submit">Login</button>
-              </div>
-            </div>
-          </form>
-        </section>
-        <section class="login-content__hero">
-          <div class="login-hero">
-            <img class="login-hero__img" src="./images/hero.svg" alt="" />
+      <section class="login-page__form">
+        <h1 class="title">Login</h1>
+        <form class="form">
+          <div class="form__section">
+            <label class="form__label" for="email">Email</label>
+            <input
+              class="form__input-control"
+              id="email"
+              type="text"
+              name="email"
+            />
           </div>
-          <p class="goto-auth">
-            Don't have an account?
-            <a class="goto-auth__link" href="./register.html">Register</a>
-          </p>
-        </section>
-      </div>
+
+          <div class="form__section">
+            <label class="form__label" for="password">Password</label>
+            <input
+              class="form__input-control"
+              id="password"
+              type="password"
+              name="password"
+            />
+          </div>
+
+          <div class="form__section">
+            <div class="btn-wrapper btn-wrapper--center">
+              <button class="btn" type="submit">Login</button>
+            </div>
+          </div>
+        </form>
+      </section>
+      <section class="login-page__hero-wrapper">
+        <img
+          class="login-page__hero hero"
+          src="./images/Auth-Illustration.svg"
+          alt=""
+        />
+        <p class="goto-auth">
+          Don't have an account?
+          <a class="goto-auth__link" href="./register.html">Register</a>
+        </p>
+      </section>
     </main>
     <footer class="login-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
