Center login button

--- a/public/login.html
+++ b/public/login.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="form__section">
-            <div class="btn-wrapper btn-wrapper--center">
+            <div class="login-page__btn-wrapper btn-wrapper">
               <button class="btn" type="submit">Login</button>
             </div>
           </div>
