Reorganize register page

--- a/public/register.html
+++ b/public/register.html
@@ -15,68 +15,68 @@
       </a>
     </header>
     <main class="register-page__main main">
-      <div class="register-content">
-        <section class="register-content__form">
-          <h1 class="title">Register</h1>
-          <form class="form">
-            <div class="form__section">
-              <label class="form__label" for="username">Username</label>
-              <input
-                class="form__input-control"
-                id="username"
-                type="text"
-                name="username"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="email">Email</label>
-              <input
-                class="form__input-control"
-                id="email"
-                type="text"
-                name="email"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="password">Password</label>
-              <input
-                class="form__input-control"
-                id="password"
-                type="password"
-                name="password"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="passwordConfirm">Password</label>
-              <input
-                class="form__input-control"
-                id="passwordConfirm"
-                type="password"
-                name="passwordConfirm"
-              />
-            </div>
-
-            <div class="form__section">
-              <div class="btn-wrapper btn-wrapper--center">
-                <button class="btn" type="submit">Register</button>
-              </div>
-            </div>
-          </form>
-        </section>
-
-        <section class="register-content__hero">
-          <div class="register-hero">
-            <img class="register-hero__img" src="./images/hero.svg" alt="" />
+      <section class="register-page__form">
+        <h1 class="title">Register</h1>
+        <form class="form">
+          <div class="form__section">
+            <label class="form__label" for="username">Username</label>
+            <input
+              class="form__input-control"
+              id="username"
+              type="text"
+              name="username"
+            />
           </div>
-          <p class="goto-auth">
-            Already have an account?
-            <a class="goto-auth__link" href="./login.html">Login</a>
-          </p>
-        </section>
-      </div>
+
+          <div class="form__section">
+            <label class="form__label" for="email">Email</label>
+            <input
+              class="form__input-control"
+              id="email"
+              type="text"
+              name="email"
+            />
+          </div>
+
+          <div class="form__section">
+            <label class="form__label" for="password">Password</label>
+            <input
+              class="form__input-control"
+              id="password"
+              type="password"
+              name="password"
+            />
+          </div>
+
+          <div class="form__section">
+            <label class="form__label" for="passwordConfirm">Password</label>
+            <input
+              class="form__input-control"
+              id="passwordConfirm"
+              type="password"
+              name="passwordConfirm"
+            />
+          </div>
+
+          <div class="form__section">
+            <div class="register-page__btn-wrapper btn-wrapper">
+              <button class="btn" type="submit">Register</button>
+            </div>
+          </div>
+        </form>
+      </section>
+
+      <section class="register-page__hero-wrapper">
+        <img
+          class="register-page__hero hero"
+          src="./images/Auth-Illustration.svg"
+          alt=""
+        />
+        <p class="goto-auth">
+          Already have an account?
+          <a class="goto-auth__link" href="./login.html">Login</a>
+        </p>
+      </section>
     </main>
     <footer class="register-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
