Regorganize profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -35,64 +35,64 @@
       </div>
     </header>
     <main class="profile-page__main main">
-      <div class="profile-content">
-        <section class="profile-content__form">
-          <h1 class="title">Profile</h1>
-          <form class="form">
-            <div class="form__section">
-              <label class="form__label" for="username">Username</label>
-              <input
-                class="form__input-control"
-                id="username"
-                type="text"
-                name="username"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="email">Email</label>
-              <input
-                class="form__input-control"
-                id="email"
-                type="text"
-                name="email"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="password">Password</label>
-              <input
-                class="form__input-control"
-                id="password"
-                type="password"
-                name="password"
-              />
-            </div>
-
-            <div class="form__section">
-              <label class="form__label" for="passwordConfirm">Password</label>
-              <input
-                class="form__input-control"
-                id="passwordConfirm"
-                type="password"
-                name="passwordConfirm"
-              />
-            </div>
-
-            <div class="form__section">
-              <div class="btn-wrapper btn-wrapper--space-between">
-                <button class="btn" type="submit">Update</button>
-                <button class="btn" type="submit">Remove</button>
-              </div>
-            </div>
-          </form>
-        </section>
-        <section class="profile-content__hero">
-          <div class="profile-hero">
-            <img class="profile-hero__img" src="./images/hero.svg" alt="" />
+      <section class="profile-page__form">
+        <h1 class="title">Profile</h1>
+        <form class="form">
+          <div class="form__section">
+            <label class="form__label" for="username">Username</label>
+            <input
+              class="form__input-control"
+              id="username"
+              type="text"
+              name="username"
+            />
           </div>
-        </section>
-      </div>
+
+          <div class="form__section">
+            <label class="form__label" for="email">Email</label>
+            <input
+              class="form__input-control"
+              id="email"
+              type="text"
+              name="email"
+            />
+          </div>
+
+          <div class="form__section">
+            <label class="form__label" for="password">Password</label>
+            <input
+              class="form__input-control"
+              id="password"
+              type="password"
+              name="password"
+            />
+          </div>
+
+          <div class="form__section">
+            <label class="form__label" for="passwordConfirm">Password</label>
+            <input
+              class="form__input-control"
+              id="passwordConfirm"
+              type="password"
+              name="passwordConfirm"
+            />
+          </div>
+
+          <div class="form__section">
+            <div class="profile-page__btn-wrapper btn-wrapper">
+              <button class="btn" type="submit">Update</button>
+              <button class="btn" type="submit">Remove</button>
+            </div>
+          </div>
+        </form>
+      </section>
+      <section class="profile-page__hero-wrapper">
+        <img
+          class="profile-page__hero hero"
+          src="./images/Profile-Illustration.svg"
+          alt=""
+        />
+      </section>
     </main>
     <footer class="profile-page__footer footer">
       <p class="copyright-notice">Copyright Information Example</p>
