--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -38,16 +38,41 @@
 
     <!-- main -->
     <main class="friendslist-page__main main">
-      <div class="friendslist-content">
-        <section class="friendslist-content__form">
-          <form class="seach-form">
-            <input
-              class="seach-form__input-control"
-              id="search"
-              type="text"
-              name="search"
-            />
-            <button class="btn btn--search" type="submit">
+      <section class="friendslist-page__form">
+        <form class="seach-form">
+          <input
+            class="seach-form__input-control"
+            id="search"
+            type="text"
+            name="search"
+          />
+          <button class="btn btn--search" type="submit">
+            <svg
+              class="btn__icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="black"
+              width="24px"
+              height="24px"
+            >
+              <path d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+              />
+            </svg>
+          </button>
+        </form>
+      </section>
+      <section class="friendslist-page__list">
+        <h2 class="subtitle">Friends List</h2>
+        <div class="friends">
+          <!-- item 1 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user01.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 1</span>
+            <button class="btn btn--40 btn--rounded">
               <svg
                 class="btn__icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -57,144 +82,117 @@
                 height="24px"
               >
                 <path d="M0 0h24v24H0z" fill="none" />
-                <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
               </svg>
             </button>
-          </form>
-        </section>
-        <section class="friendslist-content__list">
-          <h2 class="subtitle">Friends List</h2>
-          <div class="friends">
-            <!-- item 1 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user01.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 1</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
-
-            <!-- item 2 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user02.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 2</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
-
-            <!-- item 3 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user03.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 3</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
-
-            <!-- item 4 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user04.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 4</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
-
-            <!-- item 5 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user05.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 5</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
-
-            <!-- item 6 -->
-            <div class="friends__item">
-              <div class="friends__avatar">
-                <img src="./images/user06.jpg" alt="" class="friends__img" />
-              </div>
-              <span class="friends__name">Friend 6</span>
-              <button class="btn btn--40 btn--rounded">
-                <svg
-                  class="btn__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="black"
-                  width="24px"
-                  height="24px"
-                >
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-                </svg>
-              </button>
-            </div>
           </div>
-        </section>
-      </div>
+
+          <!-- item 2 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user02.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 2</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 3 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user03.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 3</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 4 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user04.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 4</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 5 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user05.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 5</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 6 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <img src="./images/user06.jpg" alt="" class="friends__img" />
+            </div>
+            <span class="friends__name">Friend 6</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
